# CryptographyProject

./: .gitignore  README.md
Alexan/: notes.txt
Alexan/final_project/: .gitignore  CMakeLists.txt  README.md  build.sh  demo.sh
Alexan/final_project/keys/: elgamal_key.pub  elgamal_key_leonidas.pub  elgamal_key_ryan.pub  elgamal_ryan2leonidas.pub  rsa_attack_leo2ryan.pub  rsa_attack_ryan2leo.pub  rsa_key  rsa_key.pub  rsa_key_ryan  rsa_key_ryan.pub  target_rsa_key
Alexan/final_project/src/: BBSRandom.cpp  BBSRandom.h  Bootstrap.cpp  Bootstrap.h  Cipher.cpp  Cipher.h  ElGamal.cpp  ElGamal.h  RSA.cpp  RSA.h  crypto_utils.cpp  crypto_utils.h  main.cpp  string_utils.cpp  string_utils.h
Alexan/final_project/tests/: check_version.cpp  test_valgrind.sh
Alexan/final_project/tests/test_data/: leonidas_cipher_elg.txt  leonidas_cipher_elg2.txt  leonidas_cipher_rsa.txt  leonidas_cipher_rsa2.txt  r2l_rsa_cipher.txt  ryans_cipher_elg.txt  ryans_cipher_elg2.txt  ryans_cipher_rsa.txt  ryans_cipher_rsa2.txt  test_cipher_attack.txt  test_cipher_elgamal.txt  test_cipher_rsa.txt  test_elgamal_cipher.txt
Leonidas/: notes.txt
Leonidas/Assignments/: 10_1_Miller-Rabin_Test.py  10_2_Naor-Reingold_Random_Number_Generator.py  10_3_Blum_Blum_Shub.py  1_1_euclidean_algo.py  1_2_extended_euclidean.py  3_1_fast_exponentiation.py  4_1_Primitive_Root_search.py  4_2_Baby-Step_Giant-Step.py
Leonidas/Final_Project/: elgamal_key.pub  elgamal_key_attack_Leonidas.pub  elgamal_key_decrypt_Leonidas.pub  main.py  rsa_attack  rsa_attack.pub  (+6 more)
Ryan/: elgamal.py  notes.txt
notes/: 11-9-2025.txt
(+12 files in other folders)
